--- a/03-chap3.Rmd
+++ b/03-chap3.Rmd
@@ -51,37 +51,23 @@ To test whether this is due to higher proliferative activity a dataset of time-l
 
 ### Dataset
 
-The dataset consists of so and so many embryos and different groups. For counting, tracks were created for each proliferative cell on MaxIPs (section \@ref(prolif)). Figure \@ref(fig:prollabs) shows a _shroom3_++ and a _shroom3_$--$ LL after 12 h of imaging where each mitotic track is individually colored and overlaid to the image data.
-
-(ref:prollabs) Tracks of Mitosis. (Image data) Last timepoint of Z-projected time-lapse movie. (Labels) each dots is marks a mitotic events. Each color represents one mitosis. Each connection between two dots represents 6 min.
-
-```{r prollabs, out.width = "0.95\\textwidth", fig.cap="(ref:prollabs)", fig.scap="Tracks of Mitosis"}
-knitr::include_graphics("figures/results/02_proliferation/prol_labs.png")
-```
+The dataset consists of 12 _shrm3_++ and 18 _shrm3_$--$ embryos with about 75 timepoints for the pLLP and 150 for cell clusters. For counting, tracks were created for each proliferative cell on MaxIPs (section \@ref(prolif)). Figure \@ref(fig:prolpllp)A shows a _shroom3_++ and a _shroom3_$--$ LL after 12 h of imaging where each mitotic track is individually colored and overlaid to the image data.
 
 To index the proliferative activity (minutes per mitosis) per embryo, the product of total number of timepoints and $\Delta$T in minutes was divided by the total number of mitotic events. From this we get to know the average time [min.] during which one mitosis occurs.\newline
 
-\makebox[\linewidth]{$Proliferation Index = \frac{Mitotses [\mathbb{n}]}{Timepoints[\mathbb{n}] * \Delta T [\mathbb{min.}]}$}
+\makebox[\linewidth]{$Proliferation\ Index = \frac{Mitotses[\mathbb{n}]}{Timepoints[ \mathbb{n}] * \Delta T [ \mathbb{min.}]}$}
 
-### Mitoses in the pLLP {#res-prolpllp}
+### Lateral Line Mitoses {#res-prolpllp}
 
-Tracking mitoses in the pLLP does not reveal any difference in proliferation from start (~28 hpf) till about mid of migration 12 hours later (\@ref(fig:prolpllp)A). For confirmation, this finding was also validated via two more traditional methods. During mitosis genetic material is replicated in S-phase^[‘S‘ like ‚Synthesis‘], while in meta-phase chromosomes are found to be heavily phosphorylated [@Hans2001]. With an EdU^[5-Ethynyl-2'-deoxyuridine] assay [@Fischer] cells in S-phase can be detected (\@ref(fig:prolpllp)B'). Using a specific phospho-histone (p-Hist.) antibody cells in meta-phase can be detected. When comparing the relative numbers of EdU resp. p-Hist cells over total pLLP cells, again, no difference in proliferation can be detected. Still, at end of migration the LL system in _shroom3_$--$ embryos does incorporate 9$\%$ more cells.
+Tracking mitoses in the pLLP does not reveal any difference in proliferation from start (~28 hpf) till about mid of migration 12 hours later (\@ref(fig:prolpllp)B). For confirmation, this finding was also validated via two more traditional methods. During mitosis genetic material is replicated in S-phase^[‘S‘ like ‚Synthesis‘], while in meta-phase chromosomes are found to be heavily phosphorylated [@Hans2001]. With an EdU^[5-Ethynyl-2'-deoxyuridine] assay [@Fischer] cells in S-phase can be detected (\@ref(fig:prolpllp)B'). Using a specific phospho-histone (p-Hist.) antibody cells in meta-phase can be detected. When comparing the relative numbers of EdU resp. p-Hist cells over total pLLP cells, again, no difference in proliferation can be detected. Still, at end of migration the LL system in _shroom3_$--$ embryos does incorporate 9$\%$ more cells.
 
-(ref:prolpllp) pLLP proliferation **A** **B-B'**
+(ref:prolpllp) pLLP proliferation **A** Tracks of Mitosis. (Image data) Last timepoint of Z-projected time-lapse movie. (Labels) each dots marks a mitotic events. Each color represents one mitosis. Each connection between two dots represents 6 min. **B-B''** Mitoses in the pLLP. (B) Count of Mitoses through time (mean$\pm$sd) (B') Proliferation Index at 36 hpf for EdU and phospho Histone labeled pLLPs (B'') Examples of EdU staining (scale bar = 100 $\mu$m) **C** Mitoses in Cell Clusters. B' and C, the colored bar indicated the median, bars indicate the 95% CI. 
 
-```{r prolpllp, out.width = "0.6\\textwidth", fig.cap="(ref:prolpllp)", fig.scap="pLLP proliferation"}
-knitr::include_graphics("figures/results/02_proliferation/prol_pllp.png")
+```{r prolpllp, out.width = "0.85\\textwidth", fig.cap="(ref:prolpllp)", fig.scap="pLLP proliferation"}
+knitr::include_graphics("figures/results/02_proliferation/prol-01.png")
 ```
 
-### Mitoses in Cell Clusters {#res-prolcc}
-
-Due to their high regenerative ability, zebrafish are a popular model in regenerative research [@Chitnis2012a; @Mokalled2016; @Harding2014a]. It is well known that zebrafish NMs have a very high regenerative capacity [@Cruz2015; @Pinto-Teixeira2015; @Wada2013]. Since individual _shroom3_$--$ CCs are smaller, we wondered if there could be compensation mechanisms activated that increase proliferation to restore wildtype CC size once they are deposited. To verify this, CC mitoses were tracked on the same data as before. Other than the pLLP, which can be observed throughout the time-lapse, CCs only begin to _exist_ when they are deposited. To normalize for individual CC lifetimes, the number of mitoses per CC is divided by the duration of the total time-lapse minus the time span to when it first appeared. This way it becomes evident that the additional cells in _shroom3_$--$ embryos are derived from CC proliferation, rather than pLLP proliferation.
-
-(ref:prolcc) CC proliferation
-
-```{r prolcc, out.width = "0.2\\textwidth", fig.cap="(ref:prolcc)", fig.scap="CC proliferation"}
-knitr::include_graphics("figures/results/02_proliferation/prol_cc.png")
-```
+Due to their high regenerative ability, zebrafish are a popular model in regenerative research [@Chitnis2012a; @Mokalled2016; @Harding2014a]. It is well known that zebrafish NMs have a very high regenerative capacity [@Cruz2015; @Pinto-Teixeira2015; @Wada2013]. Since individual _shroom3_$--$ CCs are smaller, we wondered if there could be compensation mechanisms activated that increase proliferation to restore wildtype CC size once they are deposited. To verify this, CC mitoses were tracked on the same data as before. Other than the pLLP, which can be observed throughout the time-lapse, CCs only begin to _exist_ when they are deposited. To normalize for individual CC lifetimes, the number of mitoses per CC is divided by the duration of the total time-lapse minus the time span to when it first appeared. This way it becomes evident that the additional cells in _shroom3_$--$ embryos are derived from CC proliferation, rather than pLLP proliferation (\@ref(fig:prolpllp)C).
 
 ## Rosette Formation and Cluster Deposition
 
@@ -140,7 +126,7 @@ The intent behind generating this combined dataset was to be able to efficiently
 For my questioning the most interesting variable to find dependencies with is rosettiness. In figure\@ref(fig.rdtcorr)A and B, the $x$ axis is occupied with the median rosettiness of all timepoints. As mentioned in section \@ref(intro-phen) when we had a first closer look at the pLLP phenotype we found that a fraction of the clearly as _shroom3_$--$ identified ones still were reminiscent of the _shroom3_++ phenotype. The hypothesis to test for figure \@ref(fig:rdtcorr)A was that higher speeds lead to a lower degree of rosettiness and _vice versa_. The correlation coefficient and model indicate a rather low interdependence. However, both also showed (\@ref(fig:rdtdet)C' and \@ref(fig:rdtreg)A) a high timely dependence, an effect that is lost when reducing the time dimension to the median. Interestingly, however, the line that goes through the centers determined by clustering shows is much steeper and potentially a much higher interdependence. 
 The hypothesis to test for figure \@ref(fig:rdtcorr)B was if lower rosettiness leads to a higher number of CCs deposited and _vice versa_. Since here the end of migration cluster count is one-dimensional, there is no other way than correlating to a summary statistic rosettiness. Here the correlation coefficient is rather high, the interdependence seems to be true. Additionally, the clusters determined are nicely separated from each other and the _shroom3_++ and _shroom3_$--$ pLLPs seem to form two independent groups in this space.
 
-(ref:rdtcorr) Developmental interdependencies. Digits = pearson coefficient **A** **B** 
+(ref:rdtcorr) Developmental interdependencies. Digits = pearson coefficient **A** Pearson correlation coefficient between rosettiness and speed of migration through time **B** Correlation between shrm3++ and shrm3$--$ at end of migration. 
 
 ```{r rdtcorr, out.width = "0.95\\textwidth", fig.cap="(ref:rdtcorr)", fig.scap="Developmental interdependencies"}
 knitr::include_graphics("figures/results/03_rosettes/rdt_corr_speed-ros.png")
@@ -165,16 +151,20 @@ Inhibition of Fgfr1 _via_ drug treatment^[Drug name = SU-5402 (section \@ref(mat
 
 The dataset generated consists of three pLLP stages (\@ref(fig:acstages)), four groups (DMSO, SU5402, _shrm3_++ and _shroom3_$--$), 267 pLLPs and 33.163 single cells.\newline
 
+(ref:acstages) Scheme showing a part of the posterior part of a zebrafish embryo and recorded developmental stages for 3D reconstruction
+
 ```{r acstages, out.width = "0.60\\textwidth", fig.cap="(ref:acstages)", fig.scap="Recorded developmental stages for 3D reconstruction"}
 knitr::include_graphics("figures/results/04_constriction/Yolk_ext.png")
 ```
 
 ```{r acdatatab}
 acdata <- read.delim("data/tables/acdata.txt")
-knitr::kable(acdata, "latex", booktabs=T) %>%
+knitr::kable(acdata, "latex", booktabs=T, align=c('l', 'l', 'c', 'c', 'c'), escape = F, 
+             caption = 'Apical Constriction dataset summary') %>%
   kable_styling(full_width = T) %>%
   kable_styling(font_size = 11) %>%
-  add_header_above(c("id labels" = 2, "metrics" = 3)) %>%
+  add_header_above(c("id labels" = 2, "metrics" = 3), bold=T) %>%
+  collapse_rows(columns = 1, latex_hline = "none", valign = "top") %>%
   footnote(general = "ratio = cells/pLLPs")
 ```
 
@@ -204,7 +194,7 @@ knitr::include_graphics("figures/results/04_constriction/Figure_5-2.png")
 
 ## Haircell Specification {#res-hc}
 
-Due to the rather strong cellular phenotype and overall smaller CCs we were interested if hair-cell specification would still take place and therefore if the LLs function as a sensory system would still be intact. First, to check if _atoh1a_ was still expressed in _shroom3_$--$ cells and if there were further implications in feedback loops with Notch signaling, an _In Situ Hybridization_ (ISH) experiment was conducted. For 36 and 40 hpf the count of _atoh1a_ and _deltaD_ expressing cells (\@ref(fig:hcish)) seemed to be increased. Furthermore, especially at 40 hpf, the signal seems to be a lot more fragmented and fuzzier. 
+Due to the rather strong cellular phenotype and overall smaller CCs we were interested if hair-cell specification would still take place and therefore if the LLs function as a sensory system would still be intact. First, to check if _atoh1a_ was still expressed in _shroom3_$--$ cells and if there were further implications in feedback loops with Notch signaling, an _In Situ Hybridization_ (ISH) experiment was conducted (probes can be found at section \@ref(mat-probes)). For 36 and 40 hpf the count of _atoh1a_ and _deltaD_ expressing cells (\@ref(fig:hcish)) seemed to be increased. Furthermore, especially at 40 hpf, the signal seems to be a lot more fragmented and fuzzier. 
 Traditional ISH allows for extremely sensitive detection of RNA transcripts on a whole embryo scale via a hybridizing anti-sense probe (section \@ref(ISH-met)). However, since embryos are fixed, it only allows to analyze single time points. Furthermore, since images are taken in brightfield, there is a problem of background signal and quantification of intensity.
 
 (ref:hcish) Expression of _deltaD_ and _atoh1a_ in the pLLP. Recorded in greyscale at brightfield at 20X Magnification. Images show background subtracted and de-noised EDFs of original Z-stack data.
@@ -219,12 +209,14 @@ To get access to developmental dynamics we made use of an additional, besides _c
 
 The dataset generated consists of two groups, _shroom3_++ and _shroom3_$--$, where the segmented lateral line images are split into pLLP and CC (section \@ref(mat-ato-set)). Each time-lapse movie has a total duration of 18-20 hours, consists of about 54 timepoints and two channels (488 & 561 nm).\newline
 
-```{r}
+```{r hcdatatab}
 hcdata <- read.delim("data/tables/hcdata.txt")
-knitr::kable(hcdata, "latex", booktabs=T) %>%
+knitr::kable(hcdata, "latex", booktabs=T, align=c('l', 'l', 'c', 'c', 'c'), escape = F,
+             caption = 'Haircell specification dataset summary',
+             col.names = c("genotype", "sub-structure", "embryos", "timepoints", "per 3h")) %>%
   kable_styling(full_width = T) %>%
   kable_styling(font_size = 11) %>%
-  add_header_above(c("id labels" = 2, "metrics" = 3))
+  add_header_above(c("id labels" = 2, "metrics" = 3), bold = T)
 ```
 
 A full data analysis report can be found on [github](https://github.com/KleinhansDa/reports/blob/master/b7a875fc1ea228b9061041b7cec4bd3c52ab3ce3/clusters_tl_tom.html)
@@ -250,7 +242,7 @@ To find out if the LL phenotype can be rescued by ectopic expression of Shroom3,
 For this experiment, embryos were imaged two times. First at around 36 hpf, and a second time at end of migration after about 24 hours of incubation at 28.5$^\circ$. This way it is possible to test for correlations between rosettiness earlier in development and CC count at end of migration.
 While CC count is restored in heat-shocked, _shroom3_$--$, transgene carrying embryos, it also seems to reduce the number of CCs deposited in _shroom3_++ (\@ref(fig:rescshrm)A). For the rosettiness however, we still get a significant difference (\@ref(fig:rescshrm)B). Correlation between CC count and rosettiness for heat-shocked embryos without _hs:shr3v1_ transgene (\@ref(fig:rescshrm)C, _hs:shr3v1_ 00) is about the same as for embryos not heat-shocked (\@ref(fig:rescshrm)C, _hs:shr3v1_ ??), but inverse to heat-shocked embryos with transgene (\@ref(fig:rescshrm)C, _hs:shr3v1_ +?). Importantly, correlation is lost between heat-shocked _shroom3_$--$ embryos with transgene and not heat-shocked _shroom3_++ embryos (\@ref(fig:rescshrm)C, right panel). Table 3 summarizes the number of datapoints.\newline
 
-(ref:rescshrm) shroom3 ectopic expression  (A) (B) (C)
+(ref:rescshrm) _shroom3_ ectopic expression  **A** Normalized cluster count and statistics **B** Rosettiness and statistics **C** Correlations between beginning of migration rosettiness and end of migration cluster count
 
 ```{r rescshrm, out.width = "0.95\\textwidth", fig.cap="(ref:rescshrm)", fig.scap="shroom3 ectopic expression"}
 knitr::include_graphics("figures/results/06_rescues/shrm3/rescue_temp.png")
@@ -258,10 +250,23 @@ knitr::include_graphics("figures/results/06_rescues/shrm3/rescue_temp.png")
 
 ```{r rescshrmtab, out.width = "0.95\\textwidth"}
 data <- read.delim("data/tables/hsdata.txt")
-knitr::kable(data, "latex", booktabs=T) %>%
+knitr::kable(data, "latex", booktabs=T, caption = 'Heatshock rescue dataset summary', escape = F) %>%
   kable_styling(full_width = T) %>%
   kable_styling(font_size = 11) %>%
-  add_header_above(c("id labels" = 3, "metrics" = 2))
+  add_header_above(c("id labels" = 3, "metrics" = 2), bold=T)
+```
+
+```{r rescshrmsignif, out.width = "0.95\\textwidth"}
+data <- read.delim("data/tables/hssignif_clus.txt")
+knitr::kable(data, "latex", booktabs=T, caption = 'Heatshock statistics',
+             col.names = c("group1", "group2", "p", "adj.p", "level", "p", "adj.p", "level"),
+             align = c('l','l','c','c','c','c','c','c')) %>%
+  kable_styling(full_width = T) %>%
+  collapse_rows(columns = 1, latex_hline = "none", valign = "top") %>%
+  column_spec(1, width = "2cm") %>%
+  column_spec(2, width = "2cm") %>%
+  kable_styling(font_size = 8) %>%
+  add_header_above(c("id labels" = 2, "cluster counts" = 3, "rosettiness" = 3), bold=T)
 ```
 
 A full data analysis report can be found on [github](https://github.com/KleinhansDa/reports/blob/master/b7a875fc1ea228b9061041b7cec4bd3c52ab3ce3/clusters_hsshrm3.html)
@@ -271,7 +276,7 @@ A full data analysis report can be found on [github](https://github.com/Kleinhan
 It is known that increasing concentrations of SU5402 inhibit pLLP migration and rosette formation, leading to a reduced length of the LL system and the number of CCs deposited [@Durdu2014a; @Lecaudey2008a]. 
 The idea for this experiment was to rescue the _shroom3_ phenotype by combining it with the phenotype of impaired Fgf signaling. Since inhibition of Fgf also reduces LL length, a titration experiment was planned to find a concentration that would not affect the length of the LL but still restore _shroom3_++ levels of CC count. While concentrations 0.10 and 0.20 $\mu$M do not show a significant reduction in LL length, they also do not exhibit any difference in cell count.\newline
 
-(ref:rescsu) Titration of Fgf inhibitor (A) (B) 
+(ref:rescsu) Titration of Fgf inhibitor **A** LL lengths are reduced with increased concentrations of Fgf inhibitor **B** Groupwise comparison of the length normalized cluster count per concentration of Fgf inhibitor.
 
 ```{r rescsu, out.width = "0.95\\textwidth", fig.cap="(ref:rescsu)", fig.scap="Titration of Fgf inhibitor"}
 knitr::include_graphics("figures/results/06_rescues/su54/rescue_su.png")
@@ -279,10 +284,10 @@ knitr::include_graphics("figures/results/06_rescues/su54/rescue_su.png")
 
 ```{r rescsutab, out.width = "0.95\\textwidth"}
 data <- read.delim("data/tables/sudata.txt")
-knitr::kable(data, "latex", booktabs=T) %>%
+knitr::kable(data, "latex", booktabs=T, caption = 'Morphogen rescue dataset summary') %>%
   kable_styling(full_width = T) %>%
-  kable_styling(font_size = 11) #%>%
-  #add_header_above(c("id labels" = 2, "metrics" = 3))
+  kable_styling(font_size = 11) %>%
+  add_header_above(c("shroom3++" = 3, "shroom3--" = 3), bold=T)
 ```
 
 A full data analysis report can be found on [github](https://github.com/KleinhansDa/reports/blob/master/b7a875fc1ea228b9061041b7cec4bd3c52ab3ce3/clusters_su.html)
@@ -295,7 +300,7 @@ It is very well known that Rho kinases are necessary for mechanic force transmis
 
 Embryos were incubated at distinct (figure \@ref(fig:rescrock) legend) concentrations from 24 hpf till end of migration (about 60 hpf). At this stage embryos incubated at higher concentrations displayed a significant reduction in overall body length (\@ref(fig:rescrock)A'). Therefore, to see if there is a lateral line specific effect on LL length, LL length was normalized to body length. Rockout treatment at 10 $\mu$M does not lead to a significant reduction in LL length but does significantly increase the number of cell clusters deposited.\newline
 
-(ref:rescrock) Titration of Rock inhibitor (A) (B) 
+(ref:rescrock) Titration of Rock inhibitor **A** LL lengths are reduced with increased concentrations of Rock inhibitor **B** Groupwise comparison of the length normalized cluster count per concentration of Fgf inhibitor.
 
 ```{r rescrock, out.width = "0.95\\textwidth", fig.cap="(ref:rescrock)", fig.scap="Titration of Rock inhibitor"}
 knitr::include_graphics("figures/results/06_rescues/rockout/rescue_rockout.png")
@@ -303,7 +308,7 @@ knitr::include_graphics("figures/results/06_rescues/rockout/rescue_rockout.png")
 
 ```{r rescrocktab, out.width = "0.95\\textwidth", fig.cap="(ref:rescrock)", fig.scap="Titration of Rock inhibitor"}
 data <- read.delim("data/tables/rkoutdata.txt")
-knitr::kable(data, "latex", booktabs=T) %>%
+knitr::kable(data, "latex", booktabs=T, caption = 'Rockout rescue dataset summary') %>%
   kable_styling(full_width = T) %>%
   kable_styling(font_size = 11) #%>%
   #add_header_above(c("id labels" = 2, "metrics" = 3))
@@ -318,12 +323,12 @@ The idea for this experiment was to rescue _shroom3_$--$ embryos by enhancing th
 (ref:resccal) Calyculin treatment (A) (B) 
 
 ```{r resccal, out.width = "0.95\\textwidth", fig.cap="(ref:resccal)", fig.scap="Calyculin treatment"}
-knitr::include_graphics("figures/results/06_rescues/temp/rescue_temp.png")
+knitr::include_graphics("figures/results/06_rescues/caliculyn/rescue_cali.png")
 ```
 
 ```{r resccaltab, out.width = "0.95\\textwidth", fig.cap="(ref:resccal)", fig.scap="Calyculin treatment"}
 data <- read.delim("data/tables/caldata.txt")
-knitr::kable(data, "latex", booktabs=T) %>%
+knitr::kable(data, "latex", booktabs=T, caption = 'Calyculin rescue dataset summary') %>%
   kable_styling(full_width = T) %>%
   kable_styling(font_size = 11) #%>%
   #add_header_above(c("id labels" = 2, "metrics" = 3))
@@ -344,9 +349,19 @@ knitr::include_graphics("figures/results/06_rescues/temp/rescue_temp.png")
 
 ```{r resctemptab, out.width = "0.95\\textwidth"}
 data <- read.delim("data/tables/tempdata.txt")
-knitr::kable(data, "latex", booktabs=T) %>%
+knitr::kable(data, "latex", booktabs=T, caption = 'Thermodynamic rescue dataset summary') %>%
   kable_styling(full_width = T) %>%
-  kable_styling(font_size = 11) #%>%
+  kable_styling(font_size = 11) %>%
+  add_header_above(c("shroom3++" = 3, "shroom3--" = 3), bold=T)
+```
+
+```{r resctempsignif, out.width = "0.95\\textwidth"}
+data <- read.delim("data/tables/tempsignif.txt")
+knitr::kable(data, "latex", booktabs=T, caption = 'Thermodynamic rescue statistics',
+             align = c('l','l','c','c','c')) %>%
+  collapse_rows(columns = 1, latex_hline = "none", valign = "top") %>%
+  kable_styling(full_width = T) %>%
+  kable_styling(font_size = 8) #%>%
   #add_header_above(c("id labels" = 2, "metrics" = 3))
 ```
 
@@ -364,9 +379,19 @@ knitr::include_graphics("figures/results/06_rescues/atoh1a/rescue_atoh.png")
 
 ```{r rescatotab, out.width = "0.95\\textwidth", fig.cap="(ref:rescato)", fig.scap="atoh1a knockdown"}
 data <- read.delim("data/tables/atodata.txt")
-knitr::kable(data, "latex", booktabs=T) %>%
+knitr::kable(data, "latex", booktabs=T, caption = 'Atoh rescue dataset summary') %>%
   kable_styling(full_width = T) %>%
-  kable_styling(font_size = 11)#%>%
+  kable_styling(font_size = 11) %>%
+  add_header_above(c("shroom3++" = 3, "shroom3--" = 3), bold=T)
+```
+
+```{r rescatosignif, out.width = "0.95\\textwidth"}
+data <- read.delim("data/tables/atosignif.txt")
+knitr::kable(data, "latex", booktabs=T, caption = 'Atoh1a MO rescue statistics',
+             align = c('l','l','c','c','c')) %>%
+  collapse_rows(columns = 1, latex_hline = "none", valign = "top") %>%
+  kable_styling(full_width = T) %>%
+  kable_styling(font_size = 8) #%>%
   #add_header_above(c("id labels" = 2, "metrics" = 3))
 ```
 
